[gd_scene load_steps=2 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="32" type="Button" parent="."]
margin_left = 266.379
margin_top = 146.998
margin_right = 278.379
margin_bottom = 166.998
text = "Install 32"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="64" type="Button" parent="."]
margin_left = 378.632
margin_top = 146.998
margin_right = 450.632
margin_bottom = 166.998
text = "Install 64"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="curldetect" type="Node2D" parent="."]
visible = false

[node name="exit" type="Button" parent="curldetect"]
margin_left = 28.6055
margin_top = 18.0109
margin_right = 64.6055
margin_bottom = 38.0109
text = "exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="curldetect"]
margin_right = 40.0
margin_bottom = 14.0
text = "don't have curl"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="term" type="Node2D" parent="."]
visible = false

[node name="exit" type="Button" parent="term"]
margin_left = 28.6055
margin_top = 18.0109
margin_right = 64.6055
margin_bottom = 38.0109
text = "exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="term"]
margin_right = 40.0
margin_bottom = 14.0
text = "don't have xterm"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="install" type="Node2D" parent="."]
position = Vector2( 0, 17 )

[node name="text" type="Label" parent="install"]
margin_left = 64.0
margin_top = 47.0
margin_right = 112.0
margin_bottom = 61.0
text = "nothing"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="32" to="." method="_on_32_pressed"]
[connection signal="pressed" from="64" to="." method="_on_64_pressed"]
[connection signal="pressed" from="curldetect/exit" to="." method="_on_curldetect_exit_pressed"]
[connection signal="pressed" from="term/exit" to="." method="_on_curldetect_exit_pressed"]
